--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 17:05:24 2018</p>
+         Last Run: Fri Jul 13 18:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>13</td>
                         <td>13</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -47,7 +47,7 @@
                         <td>14</td>
                         <td>0</td>
                         <td>50</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
                         <td>22</td>
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "61",
                  "50",
                  "42",
                  "37",
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 17:05:24 2018</p>
+         Last Run: Fri Jul 13 18:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,10 +272,10 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>SSW</td>
+                        <td>S</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -284,7 +284,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
@@ -296,7 +296,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -312,19 +312,19 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>31</td>
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -374,7 +374,7 @@
                  "18",
                  "20",
                  "21",
-                 "23"
+                 "22"
                ]
              },
              {
@@ -387,7 +387,7 @@
                  "18",
                  "20",
                  "21",
-                 "23"
+                 "22"
                ]
              }
            ]
@@ -452,9 +452,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "43",
-                 "38",
+                 "50",
+                 "44",
+                 "39",
                  "34",
                  "31"
                ]
@@ -467,8 +467,8 @@
                  "1",
                  "3",
                  "3",
-                 "6",
-                 "9"
+                 "5",
+                 "7"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 17:05:24 2018</p>
+         Last Run: Fri Jul 13 18:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 17:05:24 2018</p>
+         Last Run: Fri Jul 13 18:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -712,9 +712,9 @@
                         <td>0</td>
                         <td>28</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>E</td>
-                        <td>32</td>
+                        <td>13</td>
+                        <td>ENE</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -724,9 +724,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ENE</td>
-                        <td>24</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -738,7 +738,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>23</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "24",
-                 "23"
+                 "31",
+                 "21",
+                 "13"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 17:05:24 2018</p>
+         Last Run: Fri Jul 13 18:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -907,38 +907,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>3</td>
-                        <td>30</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>NNW</td>
+                        <td>31</td>
+                        <td>2</td>
                         <td>13</td>
+                        <td>NNW</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>35</td>
                         <td>1</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>14</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>3</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>2</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>N</td>
                         <td>14</td>
+                        <td>NNE</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -982,9 +982,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
-                 "24"
+                 "23"
                ]
              },
              {
@@ -993,9 +993,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
-                 "24"
+                 "23"
                ]
              }
            ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -1056,7 +1056,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "31",
                  "35",
                  "41"
                ]
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "14",
-                 "14"
+                 "12",
+                 "12",
+                 "12"
                ]
              }
            ]
