--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 18:05:22 2018</p>
+         Last Run: Fri Jul 13 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>27</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,8 +46,8 @@
                         <td>14</td>
                         <td>14</td>
                         <td>0</td>
-                        <td>50</td>
-                        <td>5</td>
+                        <td>51</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
                         <td>22</td>
@@ -58,7 +58,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>13</td>
                         <td>NNW</td>
@@ -70,11 +70,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -215,9 +215,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "61",
-                 "50",
-                 "42",
-                 "37",
+                 "51",
+                 "43",
+                 "38",
                  "35"
                ]
              },
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
+                 "28",
                  "22",
                  "20",
-                 "7",
+                 "6",
                  "11"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 18:05:22 2018</p>
+         Last Run: Fri Jul 13 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -284,11 +284,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -312,13 +312,13 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>31</td>
                         <td>7</td>
@@ -374,7 +374,7 @@
                  "18",
                  "20",
                  "21",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -387,7 +387,7 @@
                  "18",
                  "20",
                  "21",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -453,7 +453,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "44",
+                 "43",
                  "39",
                  "34",
                  "31"
@@ -465,9 +465,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
+                 "4",
                  "3",
-                 "3",
-                 "5",
+                 "6",
                  "7"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 18:05:22 2018</p>
+         Last Run: Fri Jul 13 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 18:05:22 2018</p>
+         Last Run: Fri Jul 13 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,15 +706,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
                         <td>28</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>31</td>
+                        <td>E</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -737,8 +737,8 @@
                         <td>42</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>13</td>
+                        <td>NE</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "21",
-                 "13"
+                 "27",
+                 "20",
+                 "14"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 18:05:22 2018</p>
+         Last Run: Fri Jul 13 19:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,11 +909,11 @@
                         <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>2</td>
-                        <td>31</td>
+                        <td>3</td>
+                        <td>30</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>NNW</td>
+                        <td>NNE</td>
                         <td>12</td>
                      </tr>
                      <tr>
@@ -921,22 +921,22 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>2</td>
-                        <td>35</td>
+                        <td>3</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>12</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>2</td>
-                        <td>41</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>3</td>
+                        <td>40</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNE</td>
                         <td>12</td>
                      </tr>
@@ -984,7 +984,7 @@
                "data":[
                  "26",
                  "25",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -995,7 +995,7 @@
                "data":[
                  "26",
                  "25",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "35",
-                 "41"
+                 "30",
+                 "34",
+                 "40"
                ]
              },
              {
