--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 07:05:04 2018</p>
+         Last Run: Sat Jul 14 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>11</td>
                         <td>11</td>
                         <td>0</td>
-                        <td>62</td>
+                        <td>66</td>
                         <td>3</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -43,12 +43,12 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>13</td>
+                        <td>13</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>53</td>
                         <td>5</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
                         <td>19</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>6</td>
                         <td>13</td>
                         <td>NNW</td>
@@ -70,9 +70,9 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>6</td>
                      </tr>
@@ -82,11 +82,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "11",
-                 "15",
+                 "13",
                  "16",
                  "18",
                  "19"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "11",
-                 "15",
+                 "13",
                  "16",
                  "18",
                  "19"
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "49",
-                 "41",
-                 "36",
-                 "36"
+                 "66",
+                 "53",
+                 "42",
+                 "37",
+                 "34"
                ]
              },
              {
@@ -230,7 +230,7 @@
                  "19",
                  "13",
                  "6",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 07:05:04 2018</p>
+         Last Run: Sat Jul 14 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -297,11 +297,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -309,11 +309,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -323,7 +323,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SE</td>
                         <td>5</td>
                      </tr>
@@ -455,8 +455,8 @@
                "data":[
                  "50",
                  "43",
-                 "38",
-                 "33",
+                 "39",
+                 "34",
                  "30"
                ]
              },
@@ -467,8 +467,8 @@
                "data":[
                  "7",
                  "7",
-                 "7",
-                 "7",
+                 "6",
+                 "6",
                  "5"
                ]
              }
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 07:05:04 2018</p>
+         Last Run: Sat Jul 14 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -686,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 07:05:04 2018</p>
+         Last Run: Sat Jul 14 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -715,7 +715,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -727,7 +727,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>19</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -739,7 +739,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>20</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -867,9 +867,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "22",
                  "21",
-                 "19",
-                 "20"
+                 "22"
                ]
              }
            ]
@@ -886,7 +886,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 07:05:04 2018</p>
+         Last Run: Sat Jul 14 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -910,36 +910,36 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>12</td>
-                        <td>38</td>
+                        <td>8</td>
+                        <td>36</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>ENE</td>
-                        <td>9</td>
+                        <td>NE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>14</td>
-                        <td>41</td>
+                        <td>10</td>
+                        <td>39</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NE</td>
-                        <td>9</td>
+                        <td>NNE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>16</td>
-                        <td>46</td>
+                        <td>12</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -1047,9 +1047,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "14",
-                 "16"
+                 "8",
+                 "10",
+                 "12"
                ]
              },
              {
@@ -1057,9 +1057,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "41",
-                 "46"
+                 "36",
+                 "39",
+                 "45"
                ]
              },
              {
@@ -1067,9 +1067,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "9"
+                 "7",
+                 "7",
+                 "8"
                ]
              }
            ]
